<resources>
    <string name="app_name">Educación Vial</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="road_education">Educación Vial</string>
    <string name="helpActivityName">Ayuda</string>
    <string name="gamesActivityName">Juegos</string>
    <string name="rulesActivityName">Normas</string>
    <string name="roadCultureActivityName">Cultura Vial</string>
    <string name="signsActivityName">Señales</string>
    <string name="notificationActivityName">Notificaciones</string>
    <string name="menu">Menú Principal</string>
    <string name="user_preference">Preferencias de Usuario</string>
    <string name="profile">Perfil</string>
    <string name="preference_menu">Ajustes</string>
    <string name="preference">Preferencias</string>
    <string name="notifications">Notificaciones</string>
    <string name="help">Ayuda</string>
    <string name="directories">Directorios</string>
    <string name="accidents">Accidentes</string>
    <string name="multas">Multas</string>
    <string name="msg1">Debe seleccionar al menos una opcion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error al cargar información</string>
    <string name="weather">Clima</string>

    <string name="movies_categories_key">categoriesKey</string>
    <string name="default_movies_categories">popular</string>

    <string name="descriptionTrafficFine">Descripción</string>
    <string name="codeTrafficFine">Codigo de Multa</string>
    <string name="priceTrafficFine">Precio</string>
    <string name="to_do_accident">Que hacer en caso de un accidente</string>
    <string name="accident_case">Pasos a seguir en caso de Accidente</string>
    <string name="numbers">Números de Interés</string>
    <string name="game_description">Educación vial interactiva</string>
    <string name="rules_description">Manual reglas para la seguridad vial</string>
    <string name="help_description">Información sobre accidentes y multas</string>
    <string name="road_culture_description">Tips de como comportarse en la vía</string>
    <string name="location">Ubicación</string>
    <string name="notifications_">Notificaciones</string>
    <string name="m_1">¿Te multaron?</string>
    <string name="m_2">Conoce las Infracciones</string>
    <string name="m_3">¿Como sé si fui multado?</string>
    <string name="traffic_fine_case">¿Que hacer luego de ser multado?</string>
    <string name="general">General</string>
    <string name="about">Acerca de</string>
    <string name="mesclar">Mezclar</string>
    <string-array name="location_array">
        <item />
        <item>Medellin</item>
        <item>Envigado</item>
        <item>Sabaneta</item>
        <item>Bello</item>
        <item>Copacabana</item>
    </string-array>
    <string-array name="entries_list_preference">
        <item>No activar notificaciones</item>
        <item>Ocasionalmente</item>
        <item>Frecuentemente</item>
        <item>Muy Frecuentemente</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="types_array">
        <item />
        <item>Técnicas de Manejo</item>
        <item>Indumentaria</item>
        <item>Infracciones</item>
        <item>Normatividad</item>
    </string-array>

</resources>
