<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_menu"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

    </group>

    <item android:title="@string/preference_menu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_preference_conf"
                android:title="@string/preference" />
            <item
                android:id="@+id/notifications_menu"
                android:icon="@drawable/ic_notificacion_conf"
                android:title="@string/notifications" />
        </menu>
    </item>

</menu>
